--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
